{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 4,
  "lineage": "4a7cf077-badd-7462-0d76-b46fd3c86abd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a08e8c436c6ccdc",
            "arn": "arn:aws:ec2:us-east-1:348144893552:elastic-ip/eipalloc-03a08e8c436c6ccdc",
            "domain": "vpc",
            "id": "eipalloc-03a08e8c436c6ccdc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-87-92-8.compute-1.amazonaws.com",
            "public_ip": "52.87.92.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyElasticIPNew"
            },
            "tags_all": {
              "Name": "MyElasticIPNew"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group/sg-04ee0ec4184c40096",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04ee0ec4184c40096",
            "ingress": [],
            "name": "attribute-sg",
            "name_prefix": "",
            "owner_id": "348144893552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0055ae8b4cfdb08cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-05fbfdf623db8caf1",
            "cidr_ipv4": "52.87.92.8/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-05fbfdf623db8caf1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04ee0ec4184c40096",
            "security_group_rule_id": "sgr-05fbfdf623db8caf1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.example"
          ]
        }
      ]
    }
  ]
}